test/spec_vectors/simd_i32x4_arith2/fail/module_22.wat
(module (func $i32x4.max_s-1st-arg-empty (result v128) (i32x4.max_s (v128.const i32x4 0 0 0 0))))